alignment on about page fixed

--- a/src/styles/pages/about.less
+++ b/src/styles/pages/about.less
@@ -25,15 +25,16 @@
     color: @white;
     z-index: 5;
     height: 100%;
-    position: relative;
+    padding: 70px;
     width: 100%;
-    .flex(center);
-    .page-center();
-    padding-left: 20px;
-    padding-right: 20px;
+    .flex(center, center);
     @media screen and (max-width: 850px) {
       flex-wrap: wrap;
-      .flex(center, center);
+    }
+    @media screen and (max-width: 1100px) {
+      max-width: 1100px;
+      padding: 0;
+      margin: 0 auto;
     }
   }
 
@@ -86,10 +87,6 @@
 
   .nav {
     position: fixed;
-    // background: @sunrise-peach;
-    // .dark-mode & {
-    //   background: #698AFC;
-    // }
   }
 
   &__main {
@@ -97,13 +94,15 @@
     top: 100vh;
     left: 0;
     right: 0;
+    min-height: 100vh;
     width: 100vw;
-    padding: 70px;
+    padding: 90px 70px 70px;
     background: white;
 
     @media screen and (max-width: 985px) {
       min-height: 120vh;
     }
+
     @media screen and (max-width: 830px) {
       height: auto;
     }
